feat(post): Add Post interface and date formatting utility; update blog and dashboard components

--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,8 +1,10 @@
 ---
 import Layout from "@layouts/Layout.astro";
+import Post from "@components/post/Post.astro";
+
 const { slug } = Astro.params;
 ---
 
 <Layout title={`Blog Post - ${slug}`} description="Detalle del post del blog">
-  Blog Post: {slug}
+  <Post />
 </Layout>
