--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,8 +3,8 @@
 @theme {
   --color-primary: #0f0620;
   --color-secondary: #a855f7;
-  --color-neutral: #e8d2ffff;
-  --color-complementary: #130c25ff;
+  --color-neutral: #e8d2ff;
+  --color-complementary: #130c25;
   --color-accent: #2c1d57;
   --color-accent-hover: #c27aff;
 
