feat(pagination): Implement pagination component and update post fetching actions

--- a/src/components/home/Categories.astro
+++ b/src/components/home/Categories.astro
@@ -1,11 +1,12 @@
 ---
 import Heading from "@components/heading/Heading.astro";
 import Text from "@components/text/Text.astro";
+import Section from "@components/section/Section.astro";
 ---
 
-<section>
-  <div>
-    <Heading component="h2">Categorías</Heading>
+<Section>
+  <div class="text-center">
+    <Heading component="h2" fontSize="medium">Categorías</Heading>
     <Text>Explora las categorías de nuestro blog</Text>
   </div>
-</section>
+</Section>
