--- a/src/components/post/postcard/PostCard.astro
+++ b/src/components/post/postcard/PostCard.astro
@@ -16,7 +16,7 @@ const { post } = Astro.props;
 ---
 
 <div
-  class="bg-accent/80 border-secondary flex max-w-96 flex-col rounded-md border"
+  class="bg-accent/80 border-secondary flex max-w-96 cursor-pointer flex-col rounded-md border"
 >
   <Image
     src={post.image ?? "/images/code.jpg"}
