--- a/src/components/post/gridpost/GridPost.astro
+++ b/src/components/post/gridpost/GridPost.astro
@@ -1,4 +1,6 @@
 ---
+import { actions } from "astro:actions";
+
 import PostCard from "../postcard/PostCard.astro";
 import Heading from "@components/heading/Heading.astro";
 import { type Post } from "@interfaces";
