--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -5,12 +5,12 @@ import Heading from "@components/heading/Heading.astro";
 import Text from "@components/text/Text.astro";
 import GridPost from "@components/post/gridpost/GridPost.astro";
 import Search from "@components/search/Search.astro";
-import Pagination from "@components/pagination/Pagination.astro";
+import Pagination from "@components/shared/Pagination.astro";
 
 const searchParams = Astro.url.searchParams;
 const pageParam = Number(searchParams.get("page") ?? 1);
 
-const { data } = await Astro.callAction(actions.post.getPostByPage, {
+const { data } = await Astro.callAction(actions.post.getPostsByPage, {
   page: pageParam,
 });
 
