--- a/src/pages/profile/index.astro
+++ b/src/pages/profile/index.astro
@@ -36,7 +36,7 @@ if (!isAuthed) return Astro.redirect("/auth/sign-in");
         <div class="mt-5">
           {
             user!.role === "admin" && (
-              <Link href="/dashboard/post">Dashboard</Link>
+              <Link href="/dashboard/posts">Dashboard</Link>
             )
           }
         </div>
