--- a/src/pages/dashboard/posts/index.astro
+++ b/src/pages/dashboard/posts/index.astro
@@ -1,17 +1,17 @@
 ---
-import DashboardLayout from "@layouts/DashboardLayout.astro";
-import PostForm from "@components/dashboard/post/PostForm";
-import PostView from "@components/dashboard/post/PostView";
+import DashboardLayout from '@layouts/DashboardLayout.astro'
+import PostForm from '@components/dashboard/post/PostForm'
+import { PostView } from '@components/dashboard/post/PostView'
 
-const { user } = Astro.locals;
+const { user } = Astro.locals
 
-if (!user || user.role !== "admin") {
-  return Astro.redirect("/");
+if (!user || user.role !== 'admin') {
+  return Astro.redirect('/')
 }
 ---
 
-<DashboardLayout title="posts">
-  <div class="p-8">
+<DashboardLayout title='posts'>
+  <div class='p-8'>
     <!-- //     <PostForm client:load /> -->
     <PostView client:load />
   </div>
