fix: update navbar

--- a/src/components/dashboard/ui/Sidebar.astro
+++ b/src/components/dashboard/ui/Sidebar.astro
@@ -21,7 +21,7 @@ const sidebarItems = [
     <div class="flex items-center gap-3">
       <div class="relative h-10 w-10">
         <img
-          src="/public/svg/isologo-color.svg"
+          src="/svg/isologo-color.svg"
           alt="Logo"
           class="h-full w-full object-contain"
         />
