--- a/src/components/home/Hero.astro
+++ b/src/components/home/Hero.astro
@@ -54,7 +54,7 @@ import Link from "@components/link/Link.astro";
     </div>
 
     <div class="slide-in-right stagger-1 flex justify-center lg:justify-end">
-      <div class="relative">
+      <div class="relative mt-15">
         <Image
           src="/logos/devi-hello-border.png"
           alt="Devi Mascot"
