--- a/src/components/post/Post.astro
+++ b/src/components/post/Post.astro
@@ -1,41 +1,64 @@
 ---
 import Heading from "../heading/Heading.astro";
 import Text from "../text/Text.astro";
+import PostContent from "./post-content/PostContent.astro";
+import PostLikes from "./post-likes/PostLikes.astro";
 
 import Calendar from "@icons/calendar.svg";
 import User from "@icons/user.svg";
 import Folder from "@icons/folder.svg";
 
-// interface Props {
-//   title: string;
-//   date: string;
-// }
+import { type Post } from "@interfaces";
+import CommentsView from "@components/comments/CommentsView.astro";
+import { Image } from "astro:assets";
 
-//const { title } = Astro.props;
+import { dateFormat } from "@lib/date-format";
+
+interface Props {
+  post: Post;
+}
+
+const { post } = Astro.props;
 ---
 
-<section class="p-10">
-  <Heading component="h1" fontSize="large">
-    Desarrollo de Inteligencia Artificial: Un Futuro Impulsado por la Innovación
-  </Heading>
+<div class="flex items-center justify-center p-5 md:p-10">
+  <section class="md:w-4xl">
+    <Heading component="h1" fontSize="large">
+      {post.title}
+    </Heading>
 
-  <article class="mt-10 flex gap-x-5">
-    <!-- Date -->
-    <div class="flex items-center gap-2 text-sm">
-      <Calendar class="h-4 w-4 text-white" />
-      <Text component="span">17/09/2025</Text>
-    </div>
+    <article class="mt-10 flex flex-wrap gap-5">
+      <!-- Date -->
+      <div class="flex items-center gap-2 text-sm">
+        <Calendar class="h-4 w-4 text-white" />
+        <Text component="span">
+          {dateFormat(post.createdAt)}
+        </Text>
+      </div>
 
-    <!-- Author -->
-    <div class="flex items-center gap-2 text-sm">
-      <User class="h-4 w-4 text-white" />
-      <Text component="span">Por Jonh Doe</Text>
-    </div>
+      <!-- Author -->
+      <div class="flex items-center gap-2 text-sm">
+        <User class="h-4 w-4 text-white" />
+        <Text component="span">{post.author.name}</Text>
+      </div>
 
-    <!-- Category -->
-    <div class="flex items-center gap-2 text-sm">
-      <Folder class="h-4 w-4 text-white" />
-      <Text component="span">IA</Text>
-    </div>
-  </article>
-</section>
+      <!-- Category -->
+      <div class="flex items-center gap-2 text-sm">
+        <Folder class="h-4 w-4 text-white" />
+        {post.categories.map((category) => <Text>{category.name} -</Text>)}
+      </div>
+    </article>
+
+    <Image
+      width={200}
+      height={400}
+      class="mt-10 h-40 w-auto w-full rounded-xl object-cover md:h-96"
+      src={post.image}
+      alt={post.description}
+    />
+
+    <PostContent content={post.content} />
+    <PostLikes {post} />
+    <CommentsView postId={post.id} />
+  </section>
+</div>
