--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,7 +19,7 @@ const { title, description } = Astro.props;
   <body class="bg-primary scroll-smooth">
     <Navbar />
 
-    <main class="container my-20">
+    <main class="container my-10 p-10 md:my-20 md:p-0">
       <slot />
     </main>
 
