--- a/src/components/post/postcard/PostCard.astro
+++ b/src/components/post/postcard/PostCard.astro
@@ -1,4 +1,4 @@
-<!-- ---
+---
 import { Image } from 'astro:assets'
 import Text from '@components/text/Text.astro'
 import Tag from '@components/tags/Tag.astro'
@@ -16,7 +16,7 @@ const { post } = Astro.props
 ---
 
 <div
-  class="bg-accent/80 border-secondary flex max-w-96 cursor-pointer flex-col rounded-md border"
+  class='bg-accent/80 border-secondary flex max-w-96 cursor-pointer flex-col rounded-md border'
 >
   <Image
     src={post.image ?? './images/code.jpg'}
@@ -57,4 +57,4 @@ const { post } = Astro.props
       </Text>
     </div>
   </div>
-</div> -->
+</div>
