--- a/src/components/home/Categories.astro
+++ b/src/components/home/Categories.astro
@@ -1,12 +1,34 @@
 ---
-import Heading from "@components/heading/Heading.astro";
-import Text from "@components/text/Text.astro";
-import Section from "@components/section/Section.astro";
+import Heading from '@components/heading/Heading.astro'
+import Text from '@components/text/Text.astro'
+import Section from '@components/section/Section.astro'
+import type { Post } from '@interfaces'
+import { post } from '@actions/post'
+
+const { data } = Astro.props
+let { posts } = data as unknown as { posts: Post[] }
+
+// Usar any para evitar conflictos de tipos
+const todasLasCategorias: any[] = posts.flatMap((post) => post.categories || [])
+
+const categoriasUnicas = todasLasCategorias.filter(
+  (categoria, index, array) =>
+    array.findIndex((c) => c.id === categoria.id) === index
+)
 ---
 
 <Section>
-  <div class="text-center">
-    <Heading component="h2" fontSize="medium">Categorías</Heading>
+  <div class='text-center'>
+    <Heading component='h2' fontSize='medium'>Categorías</Heading>
     <Text>Explora las categorías de nuestro blog</Text>
+  </div>
+  <div class='mt-20 flex justify-between gap-10 md:flex-row'>
+    {
+      categoriasUnicas.map((categoria) => (
+        <button class='rounded-lg bg-gray-100 px-4 py-2 font-medium text-gray-800 transition-colors hover:bg-gray-200'>
+          {categoria.name}
+        </button>
+      ))
+    }
   </div>
 </Section>
