--- a/src/components/home/LatestPost.astro
+++ b/src/components/home/LatestPost.astro
@@ -1,30 +1,23 @@
 ---
-import Heading from "@components/heading/Heading.astro";
-import PostCard from "@components/post/postcard/PostCard.astro";
-import Button from "@components/button/Button.astro";
-import Text from "@components/text/Text.astro";
-import { actions } from "astro:actions";
-import { type Post } from "@interfaces";
+import Heading from '@components/heading/Heading.astro'
+import PostCard from '@components/post/postcard/PostCard.astro'
+import Button from '@components/button/Button.astro'
+import Text from '@components/text/Text.astro'
+import { type Post } from '@interfaces'
 
-const { data } = await Astro.callAction(actions.post.getPostsByPage, {
-  page: 1,
-  limit: 3,
-});
+const { data } = Astro.props
+let { posts } = data as unknown as { posts: Post[] }
 
-if (!data) {
-  return Astro.redirect("/500");
-}
-
-const { posts } = data as unknown as { posts: Post[] };
+posts = posts.slice(0, 3)
 ---
 
-<section class="flex flex-col gap-y-10 text-center">
+<section class='flex flex-col gap-y-10 text-center'>
   <div>
-    <Heading component="h2" fontSize="medium">Últimos Posts</Heading>
+    <Heading component='h2' fontSize='medium'>Últimos Posts</Heading>
     <Text>Explora los últimos posts de nuestro blog</Text>
   </div>
 
-  <div class="mt-20 flex justify-between gap-10 md:flex-row">
+  <div class='mt-20 flex justify-between gap-10 md:flex-row'>
     {posts.map((post) => <PostCard post={post} />)}
   </div>
 </section>
