--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,20 @@
 ---
-import Layout from "@layouts/Layout.astro";
-import Hero from "@components/home/Hero.astro";
-import LatestPost from "@components/home/LatestPost.astro";
-import Categories from "@components/home/Categories.astro";
+import Layout from '@layouts/Layout.astro'
+import Hero from '@components/home/Hero.astro'
+import LatestPost from '@components/home/LatestPost.astro'
+import Categories from '@components/home/Categories.astro'
+import { actions } from 'astro:actions'
+const { data } = await Astro.callAction(actions.post.getPostsByPage, {
+  page: 1,
+})
+
+if (!data) {
+  return Astro.redirect('/500')
+}
 ---
 
-<Layout title="Devtalles community Blog">
+<Layout title='Devtalles community Blog'>
   <Hero />
-  <LatestPost />
-  <Categories />
+  <LatestPost data={data} />
+  <Categories data={data} />
 </Layout>
