--- a/src/components/dashboard/ui/DashboardTop.astro
+++ b/src/components/dashboard/ui/DashboardTop.astro
@@ -2,23 +2,19 @@
 import Button from "../../button/Button.astro";
 import Heading from "../../heading/Heading.astro";
 import Text from "../../text/Text.astro";
+import Link from "../../link/Link.astro";
+import Plus from "@icons/plus.svg";
 ---
 
-<div class="mb-8 flex items-center justify-between">
-  <div>
+<div class="bg-primary z-50 ml-80 flex items-center p-5">
+  <div class="flex-1">
     <Heading className="text-foreground text-3xl font-bold">Dashboard</Heading>
     <Text className="text-muted-foreground mt-1"
       >Gestiona tu blog desde aquí</Text
     >
   </div>
-  <div class="flex items-center gap-4">
-    <Button variant="outline">
-      <!-- <Bell class="mr-2 h-4 w-4" /> -->
-      Notificaciones
-    </Button>
-    <Button>
-      <!-- <Plus class="mr-2 h-4 w-4" /> -->
-      Nuevo Post
-    </Button>
-  </div>
+  <Button className="flex items-center">
+    <Plus class="mr-2 h-4 w-4" />
+    <Link href="/dashboard/posts/new"> Nuevo Post </Link>
+  </Button>
 </div>
