--- a/src/layouts/DashboardLayout.astro
+++ b/src/layouts/DashboardLayout.astro
@@ -15,18 +15,36 @@ const { title, description } = Astro.props;
 <!doctype html>
 <html lang="es">
   <Head title={title} description={description} />
-  <body class="flex scroll-smooth">
+  <body class="flex min-h-screen justify-around scroll-smooth">
     <Sidebar />
-    <main class="bg-accent flex w-full flex-col p-10">
+    <main id="main" class="bg-accent w-full">
       <DashboardTop />
       <slot />
     </main>
-    <!-- Todo: Agregar footer -->
   </body>
 </html>
 
 <style is:global>
   :root {
     color-scheme: light dark;
+  }
+
+  <style > main {
+    display: grid;
+    grid-template-areas: "aside main";
+    grid-template-columns: 320px 1fr;
+    grid-template-rows: 1fr;
+  }
+
+  aside {
+    grid-area: aside;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  #main {
+    grid-area: main;
+    overflow-y: auto;
   }
 </style>
