--- a/src/pages/dashboard/posts/index.astro
+++ b/src/pages/dashboard/posts/index.astro
@@ -1,37 +1,41 @@
 ---
 import DashboardLayout from "@layouts/DashboardLayout.astro";
-import PostForm from "@components/dashboard/post/PostForm";
+
 import { PostView } from "@components/dashboard/post/PostView";
+import PostForm from "@components/dashboard/post/PostForm";
 import Pagination from "@components/shared/Pagination.astro";
+import Heading from "@components/heading/Heading.astro";
+
 import { actions } from "astro:actions";
 
-const { user } = Astro.locals
+const { user } = Astro.locals;
 
-if (!user || user.role !== 'admin') {
-  return Astro.redirect('/')
-}
+if (!user || user.role !== "admin") return Astro.redirect("/");
 
 const searchParams = Astro.url.searchParams;
 const pageParam = Number(searchParams.get("page") ?? 1);
 
 const { data } = await Astro.callAction(actions.post.getPostsByPage, {
   page: pageParam,
-  limit: 4,
+  limit: 5,
 });
-
-// if (!data) {
-//   return Astro.redirect("/500");
-// }
 
 const { totalPages, posts } = data ?? { totalPages: 0, posts: [] };
 ---
 
 <DashboardLayout title="Post">
-  <div class="p-8">
-    <!-- <PostForm client:load /> -->
+  <section class="ml-80 p-8">
     <div class="flex flex-col gap-y-5">
-      {posts.map((post) => <PostView key={post.id} post={post} client:load />)}
+      {
+        posts.length > 0 ? (
+          posts.map((post) => <PostView post={post} client:load />)
+        ) : (
+          <div>
+            <Heading fontSize="medium">No existen post</Heading>
+          </div>
+        )
+      }
     </div>
     <Pagination totalPages={totalPages} />
-  </div>
+  </section>
 </DashboardLayout>
