--- a/src/components/post/post-likes/PostLikes.astro
+++ b/src/components/post/post-likes/PostLikes.astro
@@ -27,7 +27,7 @@ const { user } = Astro.locals;
 </div>
 
 <script>
-  import { $ } from "@lib/dom-selector";
+  import { $ } from "@utils/dom-selector";
   import { actions } from "astro:actions";
 
   const likeButton = $("#like-button");
