fix: update import paths for dom-selector and date-format utilities

--- a/src/components/comments/Comment.astro
+++ b/src/components/comments/Comment.astro
@@ -3,7 +3,7 @@ import Heading from "../heading/Heading.astro";
 import Text from "../text/Text.astro";
 import Calendar from "@icons/calendar.svg";
 
-import { dateFormat } from "@lib/date-format";
+import { dateFormat } from "@utils/date-format";
 
 interface Comment {
   id: string;
