--- a/src/components/auth/AuthButton.astro
+++ b/src/components/auth/AuthButton.astro
@@ -16,7 +16,7 @@ const { text, icon: Icon } = Astro.props;
 </button>
 
 <script>
-  import { $ } from "@lib/dom-selector";
+  import { $ } from "@utils/dom-selector";
   import { signIn } from "@lib/auth/auth-client";
 
   const loginButton = $("#btn-login");
