--- a/src/components/text/Text.astro
+++ b/src/components/text/Text.astro
@@ -6,6 +6,7 @@ interface Props {
   className?: string;
   fontSize?: "large" | "medium" | "small";
   color?: "primary" | "secondary" | "accent" | "none";
+  props?: any;
 }
 
 const {
