--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -5,17 +5,19 @@ import { actions } from "astro:actions";
 
 const { slug } = Astro.params;
 
-const { data } = await Astro.callAction(actions.post.getPostBySlug, {
-  slug: slug.trim(),
-});
-
-if (!data) {
+if (!slug) {
   return Astro.redirect("/404");
 }
 
-const post = data;
+const { data: post } = await Astro.callAction(actions.post.getPostBySlug, {
+  slug: slug.trim(),
+});
+
+if (!post) {
+  return Astro.redirect("/404");
+}
 ---
 
-<Layout title={`${slug}`} description={data.description}>
+<Layout title={`${post.title}`} description={post.description}>
   <Post post={post} />
 </Layout>
