--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,19 +1,19 @@
 ---
-import Layout from "@layouts/Layout.astro";
-import Post from "@components/post/Post.astro";
-import { actions } from "astro:actions";
+import Layout from '@layouts/Layout.astro'
+import Post from '@components/post/Post.astro'
+import { actions } from 'astro:actions'
 
-const { slug } = Astro.params;
+const { slug } = Astro.params
 
 const { data } = await Astro.callAction(actions.post.getPostBySlug, {
-  slug: slug.trim(),
-});
+  slug: slug?.trim() || '',
+})
 
 if (!data) {
-  return Astro.redirect("/404");
+  return Astro.redirect('/404')
 }
 
-const post = data;
+const post = data
 ---
 
 <Layout title={`${slug}`} description={data.description}>
