refactor: update comment handling and improve breadcrumb structure

--- a/src/components/breadcrumb/Breadcrumb.astro
+++ b/src/components/breadcrumb/Breadcrumb.astro
@@ -24,13 +24,13 @@ segments.forEach((segment) => {
 ---
 
 <nav aria-label="Breadcrumb" class="my-4">
-  <ol class="text-neutral flex items-center space-x-2 text-sm">
+  <ol class="text-neutral flex space-x-2 text-sm">
     {
       breadcrumbs.map((crumb, index) => (
         <li class="flex items-center space-x-2">
           {index > 0 && (
             <svg
-              class="h-4 w-4 text-gray-400"
+              class="h-3 w-3 text-gray-400"
               fill="none"
               viewBox="0 0 24 24"
               stroke="currentColor"
