--- a/src/pages/dashboard/posts/[slug].astro
+++ b/src/pages/dashboard/posts/[slug].astro
@@ -1,43 +1,52 @@
 ---
-import { actions } from 'astro:actions'
-import DashboardLayout from '@layouts/DashboardLayout.astro'
+import { actions } from "astro:actions";
+import DashboardLayout from "@layouts/DashboardLayout.astro";
 
-import PostForm from '@components/dashboard/post/PostForm'
-import Heading from '@components/heading/Heading.astro'
-import Breadcrumb from '@components/breadcrumb/Breadcrumb.astro'
+import PostForm from "@components/dashboard/post/PostForm";
+import Heading from "@components/heading/Heading.astro";
+import Breadcrumb from "@components/breadcrumb/Breadcrumb.astro";
 
-const { user } = Astro.locals
-if (!user || user.role !== 'admin') return Astro.redirect('/')
+import { type Post } from "@interfaces";
 
-const { slug } = Astro.params
+const { user } = Astro.locals;
+if (!user || user.role !== "admin") return Astro.redirect("/");
 
-const { data } = await Astro.callAction(actions.category.getCategories, {})
+const { slug } = Astro.params;
 
-if (!data) return Astro.redirect('/dashboard/posts')
+const { data } = await Astro.callAction(actions.category.getCategories, {});
 
-const { data: post } = await Astro.callAction(actions.post.getPostBySlug, {
-  slug: slug?.trim() || '',
-})
+if (!data) return Astro.redirect("/dashboard/posts");
+
+const { data: postData } = await Astro.callAction(actions.post.getPostBySlug, {
+  slug: slug?.trim() || "",
+});
+const post: Post | undefined =
+  postData && isValidPost(postData) ? postData : undefined;
 
 const categories = data.map((category) => ({
   name: category.name,
   id: category.id,
-}))
+}));
 
-const title = slug === 'new' ? 'Nuevo Producto' : 'Editar Producto'
+function isValidPost(obj: any): obj is Post {
+  // Add necessary property checks for Post type
+  return obj && typeof obj.id === "string" && typeof obj.title === "string";
+}
+
+const title = slug === "new" ? "Nuevo Producto" : "Editar Producto";
 ---
 
 <DashboardLayout title={title}>
-  <section class='mt-10 ml-80 flex flex-col items-center justify-center p-5'>
+  <section class="mt-10 ml-80 flex flex-col items-center justify-center p-5">
     <Breadcrumb />
-    <Heading component='h1' fontSize='medium' className='text-center'
+    <Heading component="h1" fontSize="medium" className="text-center"
       >{title}</Heading
     >
     <PostForm
       categories={categories}
       userId={user.id}
       post={post}
-      client:only='react'
+      client:only="react"
     />
   </section>
 </DashboardLayout>
