feat: add link to show categories

--- a/src/components/home/Categories.astro
+++ b/src/components/home/Categories.astro
@@ -17,7 +17,10 @@ const categoriasUnicas = todasLasCategorias.filter(
 );
 ---
 
-<section class="my-20 px-5 md:px-10 lg:px-20 xl:px-32 2xl:px-40">
+<section
+  id="categories"
+  class="my-20 px-5 md:px-10 lg:px-20 xl:px-32 2xl:px-40"
+>
   <div class="text-center">
     <Heading component="h2" fontSize="medium">Categorías</Heading>
     <Text>Explora las categorías de nuestro blog</Text>
