--- a/src/components/post/post-recomended/PostRecomended.astro
+++ b/src/components/post/post-recomended/PostRecomended.astro
@@ -22,8 +22,8 @@ if (!recommendedPosts || recommendedPosts.length === 0) {
 }
 ---
 
-<section class="border-accent mt-20 border-t p-10">
-  <div class="mb-10">
+<section class="border-accent mt-20 border-t">
+  <div class="mt-5 mb-10">
     <Heading component="h2" fontSize="medium"> Posts Recomendados </Heading>
   </div>
 
