--- a/src/components/shared/Footer.astro
+++ b/src/components/shared/Footer.astro
@@ -25,9 +25,12 @@ const legalLinks = [
     <div class="grid gap-8 md:grid-cols-4">
       {/* Brand */}
       <div class="space-y-4">
-        <Heading component="a" className="flex items-center space-x-3">
+        <Heading
+          component="h6"
+          className="flex items-center gap-x-3 font-semibold"
+        >
           <img
-            src="/logos/isologo-color.png"
+            src="/logos/isologo-b.png"
             alt="dev/†alles Logo"
             width="32"
             height="32"
