--- a/src/components/home/Hero.astro
+++ b/src/components/home/Hero.astro
@@ -23,7 +23,7 @@ import Link from "@components/link/Link.astro";
         </Text>
       </div>
 
-      <div class="slide-in-left stagger-2 flex flex-col gap-4 sm:flex-row">
+      <div class="slide-in-left stagger-2 flex flex-col gap-4 p-1 sm:flex-row">
         <Link href="/blog">
           <Button variant="primary" className="flex items-center">
             Explorar Últimos Posts
